Made the table data more readable and easier to read, fixed #22

--- a/static/style.css
+++ b/static/style.css
@@ -42,3 +42,19 @@ body {
 .rightAlign {
     float: right;
 }
+
+table {
+    width: 100%;
+}
+
+thead {
+    text-align: right;
+}
+
+tbody {
+    text-align: right;
+}
+
+td {
+    padding-right: 5px;
+}
